force-app/main/default/objects/Appointment__c/fields/Rescheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Time__c</fullName>
    <description>Date/Time when the Appointment is rescheduled.</description>
    <label>Rescheduled Time</label>
    <type>DateTime</type>
</CustomField>