force-app/main/default/objects/Appointment__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <description>Time when the appointment is scheduled.</description>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>