force-app/main/default/objects/Appointment__c/recordTypes/Dealer_Visit.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Visit</fullName>
    <active>true</active>
    <label>Dealer Visit</label>
</RecordType>