force-app/main/default/objects/Appointment__c/recordTypes/Test_Drive.recordType-meta.xml
<RecordType>
    <fullName>Test_Drive</fullName>
    <active>true</active>
    <label>Test Drive</label>
</RecordType>