force-app/main/default/objects/Appointment__c/validationRules/appointment_should_not_be_created.validationRule-meta.xml
<ValidationRule>
    <fullName>appointment_should_not_be_created</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISNEW(),
 ISPICKVAL( Opportunity__r.status__c , &apos;Sold&apos;) , 
NOT(ISBLANK( Scheduled_Time__c )) )</errorConditionFormula>
    <errorMessage>Appointment can&apos;t be created on sold followup leads.</errorMessage>
</ValidationRule>