force-app/main/default/objects/Appointment__c/validationRules/CancelledReasonMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CancelledReasonMandatory</fullName>
    <active>true</active>
    <description>If status is Cancelled, then Cancelled Reason field is mandatory.</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Cancelled&apos;),  ISPICKVAL( Cancelled_Reason__c , &apos;&apos;)  )</errorConditionFormula>
    <errorMessage>Specify the Cancelled Reason.</errorMessage>
</ValidationRule>