force-app/main/default/objects/Appointment__c/validationRules/CancelledReasonOnlyforCancelledStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CancelledReasonOnlyforCancelledStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL( Cancelled_Reason__c , &quot; &quot;)),
NOT(ISPICKVAL( Status__c , &apos;Cancelled&apos;) ))</errorConditionFormula>
    <errorMessage>Remove Cancelled Reason.</errorMessage>
</ValidationRule>