force-app/main/default/objects/Appointment__c/validationRules/RemoveRTIfStatusNotReschedule.validationRule-meta.xml
<ValidationRule>
    <fullName>RemoveRTIfStatusNotReschedule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Rescheduled_Time__c )),
NOT(ISPICKVAL( Status__c , &apos;Rescheduled&apos;) ))</errorConditionFormula>
    <errorMessage>Remove Rescheduled Date/Time</errorMessage>
</ValidationRule>