force-app/main/default/objects/Appointment__c/validationRules/Rescheduled_date_cant_be_past_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Rescheduled_date_cant_be_past_days</fullName>
    <active>true</active>
    <errorConditionFormula>DATETIMEVALUE ( Rescheduled_Time__c ) &lt;= NOW() &amp;&amp; ISCHANGED( Rescheduled_Time__c)</errorConditionFormula>
    <errorMessage>Rescheduled date can&apos;t be past days.</errorMessage>
</ValidationRule>