force-app/main/default/objects/Appointment__c/validationRules/RescheduledTimeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>RescheduledTimeMandatory</fullName>
    <active>true</active>
    <description>If status is Rescheduled, Reschedule Time is mandatory</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Rescheduled&apos;),  ISBLANK( Rescheduled_Time__c )  )</errorConditionFormula>
    <errorMessage>Specify Rescheduled time.</errorMessage>
</ValidationRule>