force-app/main/default/objects/Appointment__c/validationRules/Scheduled_date_cant_be_past_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_date_cant_be_past_days</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW (), Scheduled_Time__c &lt;= NOW(), AND(ISCHANGED(Scheduled_Time__c ), Scheduled_Time__c &lt;= NOW()) )</errorConditionFormula>
    <errorMessage>Scheduled Time can&apos;t be past days.</errorMessage>
</ValidationRule>