force-app/main/default/objects/Appointment__c/validationRules/Status_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;), NOT(ISPICKVAL(Status__c,&quot;Cancelled&quot;))
),
AND(
ISPICKVAL(PRIORVALUE(Status__c),&quot;Rescheduled&quot;), NOT(ISPICKVAL(Status__c,&quot;Rescheduled&quot;))
),

AND(
ISPICKVAL(PRIORVALUE(Status__c),&quot;Completed&quot;), NOT(ISPICKVAL(Status__c,&quot;Completed&quot;)))

)</errorConditionFormula>
    <errorMessage>Status cannot be changed</errorMessage>
</ValidationRule>