force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Scheduled_Time__c</columns>
    <columns>Rescheduled_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>